# gpeg

./: .gitignore  Pipfile  README.md  pyproject.toml
src/gpeg/: __init__.py  __main__.py  cli.py
src/gpep/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
